--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical" >
 
     <ProgressBar
+        android:id="@+id/progress_bar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/progress_bar"
-        style="@android:style/Widget.ProgressBar.Horizontal"
         android:indeterminate="false" />
 
     <TextView
@@ -30,18 +30,18 @@
         android:padding="10dp"/>
 
     <TextView
+        android:id="@+id/question_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:id="@+id/question_text_view"
         android:gravity="center"
         android:padding="20dp"
         android:text="@string/question_1"
         android:textColor="@color/colorText"
-        android:textStyle="bold"
-        android:textSize="30sp" />
+        android:textSize="30sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_centerHorizontal="true"
@@ -53,26 +53,26 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/true_button"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:id="@+id/true_button"
-            android:text="@string/true_button"
-            android:textColor="@color/colorText"
-            android:textStyle="bold"
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
             android:background="@color/colorTrueButton"
-            android:textSize="20sp" />
+            android:text="@string/true_button"
+            android:textColor="@color/colorTrueText"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <Button
+            android:id="@+id/false_button"
+            style="@style/Base.Widget.AppCompat.Button.Borderless"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
-            style="@style/Base.Widget.AppCompat.Button.Borderless"
-            android:id="@+id/false_button"
-            android:text="@string/false_button"
             android:background="@color/colorFalseButton"
-            android:textColor="@color/colorText"
-            android:textStyle="bold"
-            android:textSize="20sp"/>
+            android:text="@string/false_button"
+            android:textColor="@color/colorFalseText"
+            android:textSize="20sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </RelativeLayout>
